--- a/app/leaderboard.html
+++ b/app/leaderboard.html
@@ -1,4 +1,12 @@
-
+<head>
+  <title>Leaderboard</title>
+</head>
 <body>
-
+<h1>Leaderboard</h1>
+{{> leaderboard}}
 </body>
+<template name="leaderboard">
+  {{#each player}}
+  <li class="player {{selectedClass}}">{{name}}: {{score}}</li>
+  {{/each}}
+</template>
